chapter05/provision/kubernetes/static/prometheus-service-istio.yml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-service
  namespace: monitoring
spec:
  selector:
    app: prometheus
  type: ClusterIP
  ports:
  - name: http
    port: 9090
    protocol: TCP
    targetPort: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - 52.142.29.81.nip.io
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: cert-host-prod # This should match the Certificate secretName
    hosts:
    - 52.142.29.81.nip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitoring
spec:
  hosts:
  - 52.142.29.81.nip.io
  gateways:
  - prometheus-gateway
  http:
  - name: promi-routes  
#  - match:
#    - uri:
#        prefix: /
    route:
    - destination:
        host: prometheus-service.monitoring.svc.cluster.local
#        port:
#          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prometheus-dr
  namespace: monitoring
spec:
  host: prometheus-service.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
